# kids_chances

./: .gitignore  README.md  pyproject.toml
data/cleaned/: cleaned_data.csv  cleaning.ipynb
data/raw/: chile_spending.csv  enrollment.csv  various_indicators.csv
data_viz/: utils.py  viz.ipynb  viz_chile.ipynb
milestones/: static-proposal.md
src/: utils.py  viz_chile.ipynb
