[project]
name = "kids-chances"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.4.1",
    "geopandas>=1.1.1",
    "ipykernel>=7.0.1",
    "kagglehub>=0.3.13",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "vl-convert-python>=1.8.0",
]
